# AIMC

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/: copilot-instructions.md
aimc/: __init__.py  main.py  mc.py  ocr.py  storage.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/public/icons/: README.md
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: AnnotateView.tsx  BottomSheet.tsx  CameraView.tsx  ModelCheckModal.tsx  ReviewView.tsx  SidePanel.tsx
frontend/src/utils/: coords.ts  validate.ts
nix/: module.nix
resources/: markov-chain.json
tests/: test_api.py
